refactor to not use jef42

--- a/templates/app/test-api.html.twig
+++ b/templates/app/test-api.html.twig
@@ -6,7 +6,7 @@
 
     {{ form_start(form) }}
     {{ form_rest(form) }}
-    <button type="submit" value="Submit">POST to API</button>
+    <button type="submit" value="Submit">POST to API {{ translationServer }}</button>
     {{ form_end(form) }}
 
     {% if response %}
