--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -25,6 +25,15 @@
 {% endblock %}
 {% block body %}
 
+    <p>
+        This snapshot was created
+        <time data-controller="timeago"
+              data-timeago-refresh-interval-value="5000"
+              data-timeago-include-seconds-value="true"
+              data-timeago-add-suffix-value="true"
+              data-timeago-datetime-value="{{ 'now'|date('c') }}"></time>.
+    </p>
+
     {% for class, info in counts %}
         <li>
             {{ class }}
