--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -31,7 +31,7 @@
               data-timeago-refresh-interval-value="5000"
               data-timeago-include-seconds-value="true"
               data-timeago-add-suffix-value="true"
-              data-timeago-datetime-value="{{ 'now'|date('c') }}"></time>.
+              data-timeago-datetime-value="{{ 'now'|date('c') }}"></time>
     </p>
 
     {% for class, info in counts %}
