order by updatedAt

--- a/templates/app/browse-target.html.twig
+++ b/templates/app/browse-target.html.twig
@@ -11,17 +11,18 @@
 
     {% if targets|length %}
         <twig:simple_datatables :data="targets" :columns="['marking','key','engine',
-        'createdAt',
-        'text','targetLocale','targetText']">
-            <twig:block name="createdAt">
+        'updatedAt',
+        'text',
+        'targetText']">
+            <twig:block name="updatedAt">
                 <time
-                        title="{{ row.createdAt|date('c') }}"
+                        title="{{ row.updatedAt|date('c') }}"
                         data-controller="timeago"
 
                       data-timeago-refresh-interval-value="5000"
                       data-timeago-include-seconds-value="true"
                       data-timeago-add-suffix-value="true"
-                      data-timeago-datetime-value="{{ row.createdAt|date('c') }}"></time>
+                      data-timeago-datetime-value="{{ row.updatedAt|date('c') }}"></time>
 
             </twig:block>
             <twig:block name="text">
